# pyevm

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  main.py  pixi.toml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  cli.md  index.md  installation.md  usage.md
src/evm/: __init__.py  cli.py  device.py
src/evm/app/: streamlit_app.py
src/evm/filters/: __init__.py  temporal.py
src/evm/io/: __init__.py  video.py
src/evm/magnification/: __init__.py  _colorspace.py  color.py  motion.py  phase.py
src/evm/pyramids/: __init__.py  laplacian.py  steerable.py
src/pyevm/: __init__.py  cli.py
src/pyevm/app/: streamlit_app.py
src/pyevm/filters/: __init__.py  temporal.py
src/pyevm/io/: __init__.py  video.py
src/pyevm/magnification/: __init__.py  color.py  motion.py  phase.py
src/pyevm/pyramids/: __init__.py  gaussian.py  laplacian.py  steerable.py
tests/: conftest.py  test_colorspace.py  test_device.py  test_filters.py  test_magnifiers.py  test_phase_algorithm.py  test_pyramids.py  test_streaming.py
