[project]
name = "evm"
version = "0.1.0"
description = "Eulerian Video Magnification: color, motion, and phase-based algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "opencv-python>=4.9.0",
    "streamlit>=1.32.0",
    "pillow>=10.0.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# decord: GPU-accelerated video decoding (Linux/Windows only — no macOS wheels)
fast-io = [
    "decord>=0.6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
evm = "evm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
