[project]
name = "pyevm"
version = "0.1.0"
description = "Eulerian Video Magnification: color, motion, and phase-based algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "opencv-python>=4.9.0",
    "streamlit>=1.32.0",
    "pillow>=10.0.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
# torchcodec: GPU-accelerated video decoding via FFmpeg.
# pip wheels are Linux-only. On Windows use pixi (see pixi.toml), which
# installs torchcodec from conda-forge where Windows CUDA builds exist.
fast-io = [
    "torchcodec>=0.10.0; sys_platform != 'win32'",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
pyevm = "pyevm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyevm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
