[project]
name = "pyeulervid"
dynamic = ["version"]
description = "Eulerian Video Magnification: color, motion, and phase-based algorithms"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "opencv-python>=4.9.0",
    "streamlit>=1.32.0",
    "pillow>=10.0.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
# torchcodec: GPU-accelerated video decoding via FFmpeg.
# pip wheels are Linux-only. On Windows use pixi (see pixi.toml), which
# installs torchcodec from conda-forge where Windows CUDA builds exist.
fast-io = [
    "torchcodec>=0.10.0; sys_platform != 'win32'",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.4.0",
    "lefthook>=2.1.4",
    "pip-audit>=2.7.0",
]
docs = [
    "zensical>=0.0.1",
    "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
pyevm = "pyevm.cli:app"

[project.urls]
Homepage = "https://github.com/roaldarbol/pyevm"
Documentation = "https://roaldarbol.github.io/pyevm"
Repository = "https://github.com/roaldarbol/pyevm"
"Bug Tracker" = "https://github.com/roaldarbol/pyevm/issues"
Changelog = "https://github.com/roaldarbol/pyevm/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyevm"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (Typer uses this pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["pyevm"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["pyevm"]
omit = ["src/pyevm/app/*"]  # Streamlit app not unit-testable

[tool.coverage.report]
show_missing = true
skip_covered = false
